# Kloqra

./: .dockerignore  .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  README.md  TASK_BOARD.json  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  prettier.config.mjs  railway.toml  render.yaml  turbo.json
.agents/: AGENTS.md
.cursor/plans/: 1366x768_responsive_pass_335d5db0.plan.md  account_settings_transform_d4d9a4de.plan.md  admin_global_search_48af94db.plan.md  admin_member_provisioning_67318806.plan.md  admin_nav_scope_split_4e7bd5bc.plan.md  apps-web-marketing-site.md  assistant_ui_ux_polish_d8ab21af.plan.md  auth_token_hardening_6d59ab8f.plan.md  brevo_email_setup_656adf10.plan.md  bulk_member_provisioning_8a7d9f2b.plan.md  calendar_occupied_slots_ux_261e1990.plan.md  categories_tasks_restructure_6c897d87.plan.md  category_widgets_analytics_2172d1f0.plan.md  (+73 more)
.husky/: pre-commit
apps/admin/: .env.example  (+8 more)
apps/assistant-api/: .env.example  Dockerfile  README.md  pyproject.toml  railway.toml  requirements.txt
apps/assistant-api/src/: config.py  knowledge.py  main.py  openai_client.py  prompt.py  schemas.py
apps/assistant-api/tests/: test_chat.py  test_knowledge.py
deploy/: README.md  env.production.example  env.staging.example
docs/: README.md
scripts/: check-bundle-budget.mjs  check-staged-has-tests.mjs  dev-split-native.sh  e2e-bootstrap.sh  e2e-prep.mjs  ensure-web-shared-built.mjs  local-docker.sh  local-native.sh  local.sh  pnpm-wrap.sh  predev-bootstrap.sh  serve.sh  test-dashboard.mjs  test-prepr.sh  test-prepush.sh
(+1247 files in other folders)
